--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -77,7 +77,7 @@ services:
 
   algorithm-service:
     image: ${ALGORITHM_SERVICE_IMAGE}
-    container_name: algorithm_service
+#    container_name: algorithm_service
 #    ports:
 #      - "50051:50051"
     depends_on:
@@ -99,6 +99,29 @@ services:
       retries: 5
       start_period: 20s
 
+  redis:
+    image: redis:latest
+    container_name: redis
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis-data:/data
+
+  envoy:
+    image: envoyproxy/envoy:v1.28-latest
+    container_name: envoy_grpc_proxy
+    ports:
+      - "8080:8080"  # gRPC-Web endpoint для браузера
+    volumes:
+      - ./envoy.yaml:/etc/envoy/envoy.yaml:ro
+    networks:
+      - backend
+    depends_on:
+      core-service:
+        condition: service_healthy
+    restart: always
+    command: [ "-c", "/etc/envoy/envoy.yaml", "-l", "info" ]
+
 networks:
   backend:
 
@@ -106,3 +129,4 @@ volumes:
   pgdata:
   rabbitmq_data:
   minio-data:
+  redis-data:
