--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -100,7 +100,7 @@ services:
       start_period: 20s
 
   redis:
-    image: redis:latest
+    image: ${REDIS_SERVICE_IMAGE}
     container_name: redis
     ports:
       - "6379:6379"
