--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -108,6 +108,15 @@ services:
       - "6379:6379"
     volumes:
       - redis-data:/data
+    networks:
+      - backend
+    restart: always
+    healthcheck:
+      test: [ "CMD", "redis-cli", "ping" ]
+      interval: 10s
+      timeout: 3s
+      retries: 5
+
 
   envoy:
     image: envoyproxy/envoy:v1.28-latest
