--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -70,6 +70,7 @@ services:
       - "50051:50051"   # если core поднимает gRPC сам
     networks:
       - backend
+      - internet # подключаем к сети с доступом в интернет
     restart: always
     healthcheck:
       test: ["CMD-SHELL", "curl -f http://localhost:${CORE_PORT}/health || exit 1"]
@@ -135,6 +136,8 @@ services:
 
 networks:
   backend:
+  internet:
+    driver: bridge #кинули
 
 volumes:
   pgdata:
