--- a/app/core/pyproject.toml
+++ b/app/core/pyproject.toml
@@ -5,9 +5,12 @@ description = "Основной сервис для работы"
 requires-python = ">=3.13"
 dependencies = [
     "aio-pika>=9.5.7",
+    "aioboto3>=15.5.0",
+    "aiohttp>=3.13.2",
     "asyncpg>=0.30.0",
     "bcrypt>=5.0.0",
     "boto3>=1.40.52",
+    "botocore>=1.40.52",
     "fastapi>=0.118.0",
     "grpcio>=1.76.0",
     "grpcio-tools>=1.76.0",
