--- a/app/core/pyproject.toml
+++ b/app/core/pyproject.toml
@@ -11,17 +11,19 @@ dependencies = [
     "bcrypt>=5.0.0",
     "boto3>=1.40.52",
     "botocore>=1.40.52",
+    "cryptography>=46.0.3",
     "fastapi>=0.118.0",
     "grpcio>=1.76.0",
     "grpcio-tools>=1.76.0",
     "jinja2>=3.1.6",
     "pika>=1.3.2",
     "protobuf>=6.33.0",
-    "pyjwt>=2.10.1",
+    "pyjwt[crypto]>=2.10.1",
     "python-dotenv>=1.1.1",
     "python-multipart>=0.0.20",
     "pyyaml>=6.0.3",
     "redis>=7.1.0",
+    "requests>=2.32.5",
     "sqlalchemy>=2.0.43",
     "uvicorn>=0.37.0",
 ]
