--- a/app/core/pyproject.toml
+++ b/app/core/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "fastapi>=0.118.0",
     "grpcio>=1.76.0",
     "grpcio-tools>=1.76.0",
+    "httpx>=0.28.1",
     "jinja2>=3.1.6",
     "pika>=1.3.2",
     "protobuf>=6.33.0",
