--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -133,6 +133,49 @@ services:
     restart: always
     command: [ "-c", "/etc/envoy/envoy.yaml", "-l", "info" ]
 
+  loki:
+    image: grafana/loki:2.9.0
+    container_name: loki
+    networks:
+      - backend
+    ports:
+      - "3100:3100"
+    volumes:
+      - ./loki-config.yml:/etc/loki/loki-config.yml
+    command: -config.file=/etc/loki/loki-config.yml
+    restart: unless-stopped
+
+  promtail:
+    image: grafana/promtail:2.9.0
+    container_name: promtail
+    networks:
+      - backend
+    volumes:
+      - /var/log:/var/log
+      - /var/lib/docker/containers:/var/lib/docker/containers:ro
+      - /var/run/docker.sock:/var/run/docker.sock
+      - ./promtail-config.yml:/etc/promtail/config.yml
+    command: -config.file=/etc/promtail/config.yml
+    restart: unless-stopped
+    healthcheck:
+      test: [ "CMD-SHELL", "wget -qO- http://localhost:9080/ready || exit 1" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
+  grafana:
+    image: grafana/grafana:10.3.0
+    container_name: grafana
+    networks:
+      - backend
+    ports:
+      - "3000:3000"
+    depends_on:
+      - loki
+      - promtail
+    restart: unless-stopped
+
+
 networks:
   backend:
     driver: bridge #кинули
