update logging and add grafpana

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -142,6 +142,7 @@ services:
       - "3100:3100"
     volumes:
       - ./loki-config.yml:/etc/loki/loki-config.yml
+      - loki-data:/loki
     command: -config.file=/etc/loki/loki-config.yml
     restart: unless-stopped
 
@@ -185,3 +186,4 @@ volumes:
   rabbitmq_data:
   minio-data:
   redis-data:
+  loki-data:
