--- a/app/core/pyproject.toml
+++ b/app/core/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
     "jinja2>=3.1.6",
     "pika>=1.3.2",
     "protobuf>=6.33.0",
+    "pyinstrument>=5.1.1",
     "pyjwt[crypto]>=2.10.1",
     "python-dotenv>=1.1.1",
     "python-multipart>=0.0.20",
