переписан прод конфигурация сервера, оптимизация работы

--- a/app/core/Dockerfile
+++ b/app/core/Dockerfile
@@ -5,20 +5,22 @@ WORKDIR /src
 RUN apt-get update && apt-get install -y \
     curl \
     build-essential \
+    bash \
     && rm -rf /var/lib/apt/lists/*
 
-RUN pip install --no-cache-dir uv grpcio-tools
+RUN pip install --no-cache-dir uv grpcio-tools gunicorn uvicorn[standard]
 
 COPY app/core/pyproject.toml ./pyproject.toml
-COPY app/core/src/ ./core/
 
-COPY proto/ ./proto/
+COPY app/core/src ./core
+COPY proto ./proto
 
 RUN uv lock
 RUN uv sync --locked --no-dev
+
 RUN bash ./proto/generate_grpc.sh
 
 EXPOSE 8000
 EXPOSE 50051
 
-ENTRYPOINT ["uv", "run", "python", "core/main.py"]
+CMD ["uv", "run", "python", "core/main.py"]
