--- a/app/core/pyproject.toml
+++ b/app/core/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "gunicorn>=23.0.0",
     "httpx>=0.28.1",
     "jinja2>=3.1.6",
+    "locust>=2.41.6",
     "pika>=1.3.2",
     "protobuf>=6.33.0",
     "pyinstrument>=5.1.1",
