--- a/app/core/pyproject.toml
+++ b/app/core/pyproject.toml
@@ -7,6 +7,7 @@ dependencies = [
     "aio-pika>=9.5.7",
     "aioboto3>=15.5.0",
     "aiohttp>=3.13.2",
+    "argon2-cffi>=25.1.0",
     "asyncpg>=0.30.0",
     "aws-requests-auth>=0.4.3",
     "bcrypt>=5.0.0",
