--- a/envoy.yaml
+++ b/envoy.yaml
@@ -1,44 +1,84 @@
 static_resources:
   listeners:
-    - name: listener_0
+    - name: grpc_frontend
       address:
         socket_address:
           address: 0.0.0.0
           port_value: 8080
+
       filter_chains:
         - filters:
             - name: envoy.filters.network.http_connection_manager
               typed_config:
                 "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
-                stat_prefix: ingress_http
+                stat_prefix: grpc_web_hcm
                 codec_type: AUTO
+
+                # ===== ВАЖНО: отключаем таймауты, чтобы стрим не обрывался =====
+                stream_idle_timeout: 0s
+                request_timeout: 0s
+                delayed_close_timeout: 0s
+
                 route_config:
                   name: local_route
                   virtual_hosts:
                     - name: grpc_service
                       domains: ["*"]
+
                       routes:
+                        # OPTIONS preflight
+                        - match:
+                            prefix: "/"
+                            headers:
+                              - name: ":method"
+                                exact_match: "OPTIONS"
+                          direct_response:
+                            status: 200
+
+                        # Основной gRPC маршрут
                         - match:
                             prefix: "/"
                           route:
                             cluster: core
+                            timeout: 0s   # <=== самый важный момент
+                            max_stream_duration:
+                              grpc_timeout_header_max: 0s
+                              max_stream_duration: 0s
+
+                          typed_per_filter_config:
+                            envoy.filters.http.cors:
+                              "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.CorsPolicy
+                              allow_origin_string_match:
+                                - prefix: "*"   # если хочешь — поменяй на localhost
+                              allow_methods: "GET, POST, OPTIONS"
+                              allow_headers: "content-type,x-grpc-web,x-user-agent,authorization,accept"
+                              max_age: "3600"
+                              allow_credentials: true
+
+                # ===== правильный порядок фильтров =====
                 http_filters:
                   - name: envoy.filters.http.grpc_web
                     typed_config:
                       "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_web.v3.GrpcWeb
+                      # внутри grpc_web БУФЕРА НЕТ, он не режет поток
+
                   - name: envoy.filters.http.cors
                     typed_config:
                       "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors
+
                   - name: envoy.filters.http.router
                     typed_config:
                       "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
 
   clusters:
     - name: core
-      connect_timeout: 0.25s
+      connect_timeout: 0.5s
       type: STRICT_DNS
       lb_policy: ROUND_ROBIN
-      http2_protocol_options: {}   # обязательно для gRPC
+
+      # ===== обязательный HTTP/2, иначе будут проблемы =====
+      http2_protocol_options: {}
+
       load_assignment:
         cluster_name: core
         endpoints:
@@ -48,3 +88,7 @@ static_resources:
                     socket_address:
                       address: core_service
                       port_value: 50051
+
+      # ===== отключаем idle timeout (иначе режет долгие стримы) =====
+      common_http_protocol_options:
+        idle_timeout: 0s
