--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -150,10 +150,7 @@ services:
       core-service:
         condition: service_healthy
     restart: always
-    command: [
-      "-c", "/etc/envoy/envoy.yaml",
-      "-l", "trace"
-    ]
+    command: ["-c", "/etc/envoy/envoy.yaml","-l", "trace"]
 
 networks:
   backend:
